--- a/client/User/style.css
+++ b/client/User/style.css
@@ -561,8 +561,68 @@ button:hover{
 ::-webkit-scrollbar-thumb:horizontal:hover{
     cursor: pointer;
 }
-
-
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: 15% auto; /* 15% from the top and centered */
+    /* padding: 20px; */
+    padding:12px 12px;
+    border: 1px solid #888;
+    width: 30%; 
+    height: 20vh;
+    animation-name: animate;
+        animation-duration: 1s;
+  }
+  @keyframes animate {
+    0%{
+        opacity:0;
+    }
+    100%{
+        display:1;
+    }
+  }
+  /* The Close Button */
+  .close {
+    color: rgb(255, 255, 255);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    top:10px;
+    right:20px;
+  }
+  .close:hover,
+  .close:focus {
+    color: rgb(172, 165, 165);
+    text-decoration: none;
+    cursor: pointer;
+  }
+#mb1{
+    margin: 5%;
+    color: #000;
+    background-color: red;
+    width: 15%;
+}
+#mb2{
+    margin: 5%;
+    color: #000;
+    background-color: rgb(91, 84, 84);
+    width: 15%;
+}
 /****************footer**************/
 
 footer{
