--- a/client/User/style.css
+++ b/client/User/style.css
@@ -238,7 +238,7 @@ nav img{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height:300px;
+    height:200px;
     width:40vw;
     overflow: scroll;
 }
@@ -260,8 +260,8 @@ nav img{
 }
 
 .cat .cat-img img{
-    height:200px;
-    width: 200px;
+    height:100px;
+    width: 100px;
     border-radius: 50%;
     object-fit: cover;
     border: 1px #fdfdfd solid;
@@ -280,7 +280,11 @@ nav img{
     font-weight: 500;
     /* text-align: center; */
 }
-
+#userimg{
+    justify-content: center;
+    align-items: center;
+    /* margin-left:5rem; */
+}
 /******************* myblogs ****************/
 .blog-header{
     color:black;
