--- a/client/User/style.css
+++ b/client/User/style.css
@@ -267,6 +267,11 @@ nav img{
     border: 1px #fdfdfd solid;
     transition:transform .75s;
 }
+.cat-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .cat .cat-img img:hover{
     transform:scale(1.15);
 }
@@ -279,11 +284,6 @@ nav img{
     font-size: 1.4rem;
     font-weight: 500;
     /* text-align: center; */
-}
-#userimg{
-    justify-content: center;
-    align-items: center;
-    /* margin-left:5rem; */
 }
 /******************* myblogs ****************/
 .blog-header{
@@ -308,7 +308,23 @@ nav img{
     bottom: 95px;
     left: 8px;
 }
-
+.bookmark{
+    display: flex;
+    position: absolute;
+    height:20px;
+    width: 399px;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    transform: translateX(-60px);
+}
+#recent .bookmark .fa-regular{
+    color: #252525;
+}
+#recent .bookmark .fa-solid{
+    color: #252525;
+    
+}
 /****** upper-body ******/
 
 .upper-body{
