--- a/client/User/style.css
+++ b/client/User/style.css
@@ -182,6 +182,9 @@ nav img{
     margin:20px;
     font-size: 20px;
 }
+.navigatetofoll{
+    text-decoration: none;
+}
 .count{
     border:1px solid #f8bf8c;
     padding:2px 3px;
