--- a/public/User/style.css
+++ b/public/User/style.css
@@ -313,6 +313,36 @@ nav img{
     color:black;
     margin-left: 5%;
 }
+.fa-trash:hover::after{
+    content: "Delete";
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transform: translateX(-30px);
+    margin-top: 10px;
+    background: #252525;
+    color:white;
+    padding:10px;
+    border-radius: 10px;;
+}
+.fa-pen-to-square:hover::after{
+    content: "Edit";
+    position:fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transform: translateX(-23px);
+    margin-top: 10px;
+    background: #252525;
+    color:white;
+    padding:10px;
+    border-radius: 10px;
+}
 .author{
     height: 50px;
     width: 50px;
