--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -574,6 +574,7 @@ button.primaryContained {
     flex-direction: column;
     word-wrap:wrap;
     width:350px;
+    margin:2%
 }
 .blog-title{
     font-family: 'Bona Nova', serif;
@@ -602,7 +603,7 @@ button.primaryContained {
     user-select: none;
 }
 .fa-solid{
-    margin-left: 82.5px;
+    margin-left: 0px;
     cursor: pointer;
     user-select: none;
 }
