--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -204,6 +204,7 @@ button:hover{
     margin: 1px 0px;
     overflow: hidden;
     border-radius: 20px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   }
   .cover {
     padding: 0px 30px;
@@ -232,6 +233,7 @@ button:hover{
     height: 100%;
     object-fit: cover;
     transition:transform .75s;
+   
 }
 .child>img:hover{
     transform:scale(1.15);
