--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -147,9 +147,7 @@ nav img{
     font-size: 5rem;
     padding:20px;
 }
-.upper-body-text>p{
-    font-size: 4rem;
-}
+
 .upper-body-text>p>span{
     color:#f8bf8c;
 }
@@ -629,6 +627,9 @@ footer{
     position: relative;
     margin-right: 200px;
     top: 26px;
+}
+.upper-body{
+    font-size: 4rem;
 }
 }
 
