--- a/public/search/styles.css
+++ b/public/search/styles.css
@@ -329,11 +329,15 @@ nav img{
     color: #f8bf8c;
 }
 .user-search{
+    margin: 10px auto;
     border-radius: 50%;
     height:200px;
     width:200px;
 }
-
+.user-name{
+    font-size: 1.2rem;
+    margin: 0 auto;
+}
 /****************footer**************/
 
 footer{
